--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     
     <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KiiTjwrOKjk?si=i-MnXfwPnEUKwwad" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen=""></iframe>
 
-    <a href="https://fun2rhyme.com/rhymegame" class="game-button">Play Rhyme Game!</a>
+    <a href="https://fun2rhyme.com/rhymegame/index.html" class="game-button">Play Rhyme Game!</a>
   </main>
 
   <footer>
