--- a/rhymegame/index.html
+++ b/rhymegame/index.html
@@ -151,7 +151,7 @@
       <div class="correct-answers" id="correctAnswers"></div>
     </div>
     
-    <a href="https://fun2rhyme.com" class="home-button">Back to Home</a>
+    <a href="https://avnesas.github.io/FUn2rhyME/" class="home-button">Back to Home</a>
   </main>
 
   <footer>
