please be the last update - Update index.html

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <p class="rhyme-text">
           <span class="bouncing-word" style="--delay: 1; color: var(--primary-yellow);">Truck,</span>
           <span class="bouncing-word" style="--delay: 2; color: var(--bright-yellow);">Duck,</span>
-          <span class="bouncing-word" style="--delay: 3; color: var(--white);">Pluck!</span>
+          <span class="bouncing-word" style="--delay: 3; color: var(--primary-yellow);">Pluck!</span>
         </p>
         <p class="rhyme-explanation">These words rhyme with -uck!</p>
       </div>
