--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
   </main>
 
   <footer>
-    <p>© 2023 Fun 2 Rhyme - Where words bounce and rhymes pounce!</p>
+    <p>Fun 2 Rhyme - Where words bounce and rhymes pounce!</p>
   </footer>
 
   <script>
